--- a/app.css
+++ b/app.css
@@ -8,17 +8,22 @@
   }
   
   body {
+    height: 100vh;
+    width: 100vw;
     margin: 0;
     background-image: url(./assets/bg.jpg);
     background-position: center;
     background-repeat:no-repeat;
     background-size: cover;
+    overflow: hidden;
   }
+  
   h1{
     margin-top: 5%;
   }
   
   .board {
+    
     margin: 0 auto;
     display: grid;
     justify-content: center;
