--- a/app.css
+++ b/app.css
@@ -17,7 +17,7 @@
     background-size: cover;
     overflow: hidden;
   }
-  
+
   h1{
     margin-top: 5%;
   }
@@ -32,7 +32,8 @@
     align-items: center;
     grid-template-columns: repeat(3, auto);
     background-color: rgba(0, 0, 0, 0.281);
-    max-width: 50%;
+    max-width: 80%;
+    height: 70vh;
     padding: 5rem;
   }
   
